changed the navbar style and removed the master head

--- a/media/css/styles.css
+++ b/media/css/styles.css
@@ -36,6 +36,7 @@ body {
 html,
 body {
     height: 100%;
+    margin-top: 20px;
     /* The html and body elements cannot have any padding or margin. */
 }
 
@@ -147,9 +148,6 @@ table > tbody > tr > td > a:hover {
     text-align:center;
 }
 
-h1 {
-    color:#563D7C;
-}
 .form-signin {
     max-width: 330px;
     background-color: #f7f7f7;
