--- a/templates/static/base.html
+++ b/templates/static/base.html
@@ -1,6 +1,7 @@
 {% extends "static/atom.html" %}
 <!-- HEADER -->
 {% block header %}
+{% comment %}
 <div id="masthead">  
     <div class="container">
         <div class="row">
@@ -10,6 +11,7 @@
         </div> <!--row-->
     </div><!-- container -->
 </div><!--masthead-->
+{% endcomment %}
 {% endblock header %}
 <!-- END OF HEADER -->
 {% block content %}
