--- a/templates/general/login.html
+++ b/templates/general/login.html
@@ -32,10 +32,12 @@
                 <input name="pwd" type="password" class="form-control" id="password" value="" placeholder="Password" />
             </div><!--form-group-->
         </div><!--form-group-->
+        {% if error_msg %}
         <div class="alert alert-danger alert-dismissable">
             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
             {{ error_msg }}
         </div>
+        {% endif %}
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
 </div><!--container-->
